@@ -2,7 +2,7 @@ Package: neighbours
 Type: Package
 Title: Neighbourhood Functions for Local-Search Algorithms
 Version: 0.1-0
-Date: 2020-05-12
+Date: 2020-06-05
 Maintainer: Enrico Schumann <es@enricoschumann.net>
 Authors@R: person(given = "Enrico", family = "Schumann",
                   role  = c("aut", "cre"),
