@@ -1,7 +1,14 @@
+2020-06-05  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/neighbourfun.R (compare_vectors): simplify
+        computation
+        (neighbourfun): fix case of numeric neighbourhood
+        with updating and 'active' vector
+
 2020-05-12  Enrico Schumann  <es@enricoschumann.net>
 
-	* R/neighbourfun.R (compare_vectors): new
-	argument 'diff.char'
+        * R/neighbourfun.R (compare_vectors): new
+        argument 'diff.char'
 
 2020-03-28  Enrico Schumann  <es@enricoschumann.net>
 
